fixed margins in landing and removed some spacing in code

--- a/css/style.css
+++ b/css/style.css
@@ -601,6 +601,7 @@ footer a:hover{
     text-align: left;
     width: 100%;
     margin-bottom: 50px;
+    margin-top: 10%;
 }
 
 .landing-content>*:first-child {
@@ -644,7 +645,7 @@ footer a:hover{
 
 .landing .btn-large {
     font-family: 'Poppins', sans-serif;
-    margin-top: 150px;
+    margin-top: 10%;
     font-size: 25px;
     font-weight: 600;
 }
